force-app/main/default/objects/OA_Monthly_Quota__c/OA_Monthly_Quota__c.object-meta.xml
<CustomObject>
    <label>Monthly Quota</label>
    <nameField>
        <displayFormat>MQ-{00000000}</displayFormat>
        <label>Monthly Quota Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Monthly Quotas</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>