force-app/main/default/objects/OA_Monthly_Quota__c/fields/Monthly_Quota_Unique_Key__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Quota_Unique_Key__c</fullName>
    <label>Monthly Quota Unique Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>