force-app/main/default/objects/OA_Monthly_Quota__c/fields/OA_External_Id__c.field-meta.xml
<CustomField>
    <fullName>OA_External_Id__c</fullName>
    <externalId>true</externalId>
    <label>External Id</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>