force-app/main/default/objects/OA_Monthly_Quota__c/fields/OA_fExternal_Id__c.field-meta.xml
<CustomField>
    <fullName>OA_fExternal_Id__c</fullName>
    <formula>CASESAFEID(OA_Sales_Target__r.OA_CSO__c) + TEXT(OA_Sales_Target__r.OA_Region__c)  +  OA_Sales_Target__r.OA_Account__c  + OA_Sales_Target__r.RecordTypeId +  TEXT(OA_Month__c) +  TEXT(OA_Sales_Target__r.OA_Year__c)</formula>
    <label>External Id (Hidden Copy)</label>
    <type>Text</type>
</CustomField>