force-app/main/default/objects/OA_Monthly_Quota__c/fields/OA_Forecast__c.field-meta.xml
<CustomField>
    <fullName>OA_Forecast__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Forecast</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>