force-app/main/default/objects/OA_Monthly_Quota__c/fields/OA_Gross_Pipeline__c.field-meta.xml
<CustomField>
    <fullName>OA_Gross_Pipeline__c</fullName>
    <defaultValue>0</defaultValue>
    <description>to capture the actual amount of Open Opportunities. Will be used for reporting.</description>
    <label>Gross Pipeline</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>