force-app/main/default/objects/OA_Monthly_Quota__c/fields/OA_Is_Forecast_Editable__c.field-meta.xml
<CustomField>
    <fullName>OA_Is_Forecast_Editable__c</fullName>
    <formula>IF( 
OR(TEXT(OA_Month__c) = TEXT(MONTH(Today())), (TEXT(OA_Month__c) = TEXT(MONTH(Today()) + 1 )), (TEXT(OA_Month__c) = TEXT(MONTH(Today()) + 2))), TRUE, FALSE )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Forecast Editable?</label>
    <type>Checkbox</type>
</CustomField>