force-app/main/default/objects/OA_Monthly_Quota__c/fields/OA_Monthly_Quota__c.field-meta.xml
<CustomField>
    <fullName>OA_Monthly_Quota__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Monthly Quota</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>