force-app/main/default/objects/OA_Monthly_Quota__c/fields/OA_Risk_Adjusted_Pipeline__c.field-meta.xml
<CustomField>
    <fullName>OA_Risk_Adjusted_Pipeline__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Risk Adjusted Pipeline</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>