force-app/main/default/objects/OA_Monthly_Quota__c/fields/OA_Sales_Target__c.field-meta.xml
<CustomField>
    <fullName>OA_Sales_Target__c</fullName>
    <label>Sales Quota</label>
    <referenceTo>Sales_Quota__c</referenceTo>
    <relationshipLabel>Monthly Quotas</relationshipLabel>
    <relationshipName>Monthly_Targets</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>