force-app/main/default/objects/OA_Monthly_Quota__c/fields/OA_TotalSold__c.field-meta.xml
<CustomField>
    <fullName>OA_TotalSold__c</fullName>
    <formula>OA_Presold_Target_Revenue__c + OA_Sold_Revenue__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Sold</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>