force-app/main/default/objects/OA_Monthly_Quota__c/fields/OA_Unweighted_Pipeline__c.field-meta.xml
<CustomField>
    <fullName>OA_Unweighted_Pipeline__c</fullName>
    <formula>(OA_Gross_Pipeline__c / OA_TotalSold__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unweighted Pipeline</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>