force-app/main/default/objects/OA_Monthly_Quota__c/fields/OA_Year__c.field-meta.xml
<CustomField>
    <fullName>OA_Year__c</fullName>
    <formula>TEXT(OA_Sales_Target__r.OA_Year__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Year</label>
    <type>Text</type>
</CustomField>