force-app/main/default/objects/OA_Monthly_Quota__c/validationRules/Cannot_Edit_Forecast_outside_3_months.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Edit_Forecast_outside_3_months</fullName>
    <active>false</active>
    <errorConditionFormula>IF(ISCHANGED(OA_Forecast__c ) &amp;&amp;
( TEXT(OA_Month__c) = TEXT(MONTH( TODAY() ))) || 
( TEXT(OA_Month__c) = TEXT(MONTH( ADDMONTHS(TODAY(),1) ))) ||
( TEXT(OA_Month__c) = TEXT(MONTH( ADDMONTHS(TODAY(),2) ))), FALSE, True 
)</errorConditionFormula>
    <errorMessage>cannot edit forecast on monthly quota outside three months from today.</errorMessage>
</ValidationRule>